WIP day two part one
- [ ] Talk about String vs Character
- [x] Extract method for move score
- [x] win case
- [ ] decide whether to introduce move objects
- [ ] add test case for multiple games